--- a/style.css
+++ b/style.css
@@ -98,70 +98,75 @@ select{
 }
 .child:nth-child(1)>:nth-child(1){
     background-color: rgba(21, 17, 17, 0.912);
-    border-top-left-radius: 10px;
+    border-radius: 10px;
     text-transform: uppercase;
     text-align: center;
 
 }
 .child:nth-child(1)>:nth-child(2){
-    background-color: green;
-    border-top-left-radius: 10px;
+        background-color: rgba(128, 128, 128, 0.916);
+
+    border-radius: 10px;
     text-transform: uppercase;
     text-align: center;
 
 }
 .child:nth-child(2)>:nth-child(2){
-    background-color: green;
-    border-top-left-radius: 10px;
+        background-color: rgba(128, 128, 128, 0.916);
+
+    border-radius: 10px;
     text-transform: uppercase;
     text-align: center;
 
 }
 .child:nth-child(3)>:nth-child(2){
-    background-color: green;
-    border-top-left-radius: 10px;
+        background-color: rgba(128, 128, 128, 0.916);
+
+    border-radius: 10px;
     text-transform: uppercase;
     text-align: center;
 
 }
 .child:nth-child(4)>:nth-child(2){
-    background-color: green;
-    border-top-left-radius: 10px;
+        background-color: rgba(128, 128, 128, 0.916);
+
+    border-radius: 10px;
     text-transform: uppercase;
     text-align: center;
 
 }
 .child:nth-child(5)>:nth-child(2){
-    background-color: green;
-    border-top-left-radius: 10px;
+        background-color: rgba(128, 128, 128, 0.916);
+
+    border-radius: 10px;
     text-transform: uppercase;
     text-align: center;
 
 }
 .child:nth-child(6)>:nth-child(2){
-    background-color: green;
-    border-top-left-radius: 10px;
+    background-color: rgba(128, 128, 128, 0.916);
+    border-radius: 10px;
     text-transform: uppercase;
     text-align: center;
 
 }
 .child:nth-child(2)>:nth-child(1){
     background-color: rgba(21, 17, 17, 0.912);
-    border-top-left-radius: 10px;
+    border-radius: 10px;
     text-transform: uppercase;
     text-align: center;
 
 }
 .child:nth-child(3)>:nth-child(1){
     background-color: rgba(21, 17, 17, 0.912);
-    border-top-left-radius: 10px;
+    border-radius: 10px;
     text-transform: uppercase;
     text-align: center;
 
 }
 .child:nth-child(4)>:nth-child(1){
     background-color: rgba(21, 17, 17, 0.912);
-    border-top-left-radius: 10px;
+    border-radius: 10px;
     text-transform: uppercase;
     text-align: center;
 
@@ -192,4 +197,22 @@ select{
     bottom: 5px;
     left: 5px;
     font-size: 1.5em;
+}
+.darkParent{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    background-color: #fff;
+    position: absolute;
+    right: 10px;
+    height: 40px;
+    border-radius: 17px;
+    width: 80px;
+}
+.dark{
+    background-color: #000;
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+    border-radius: 50%;
 }
